--- a/HTML/Contacto.html
+++ b/HTML/Contacto.html
@@ -51,19 +51,20 @@
         <h3>CONTACTO</h3>
     </div>
 
-    <div class="horario">
-        <h4 class="horario-atencion">Horarios de atención: </h4>
-        <h4 class="horario-lunesaviernes">  Martes a domingo: 09:00 a 13:00 hs / 16:30 a 21:00 hs </h4>
+    <div class="horarios-direccion">
+        <div class="horario">
+            <h4 class="horario-atencion">Horarios de atención:</h4><h4 class="horario-lunesaviernes">  Martes a domingo: 09:00 a 13:00 hs / 16:30 a 21:00 hs </h4>
+        </div>
+
+        <div class="direccion">
+            <h4 class="direccion-direccion">Dirección: </h4> <h4 class="direccion-calle">Avenida San Martín Nte. 1362</h4>
+        </div>
+
+        <div class="localidad">
+            <h4 class="direccion-localidad">Localidad: </h4> <h4 class="direccion-ciudad">  General Pico - La Pampa</h4>
+        </div>
     </div>
 
-    <div class="direccion">
-        <h4 class="direccion-direccion">Dirección: </h4> 
-        <h4 class="direccion-calle">Avenida San Martín Nte. 1362</h4>
-    </div>
-    <div class="localidad">
-        <h4 class="direccion-localidad">Localidad: </h4> 
-        <h4 class="direccion-ciudad">  General Pico - La Pampa</h4>
-    </div>
     
 
     <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d810.5743318389126!2d-63.775004030450525!3d-35.64504550844797!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95c49d4c3753b017%3A0x1ae21f8db2bacb61!2sAv.%20San%20Mart%C3%ADn%20Nte.%201362%2C%20L6360%20Gral.%20Pico%2C%20La%20Pampa!5e0!3m2!1ses!2sar!4v1682435810143!5m2!1ses!2sar" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> 
