--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
+          <img src="image/slider/local-0.jpeg" class="d-block w-100">
+        </div>
+        <div class="carousel-item">
           <img src="image/slider/local_1.jpeg" class="d-block w-100">
         </div>
         <div class="carousel-item">
           <img src="image/slider/local-2.jpeg" class="d-block w-100">
-        </div>
-        <div class="carousel-item">
-          <img src="image/slider/local2-inicio.jpg" class="d-block w-100">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
